# agent-os

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md  TODO.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.agent/notes/: dbt-perf-optimization.md  http_direct_probe.ts  kernel-security-audit-2026-04-05.md  loop-prd-baseline.md  npm_unreachable_pkg_probe.ts  npm_unreachable_probe.ts  npmcli_agent_probe.ts  npx_debug_probe.ts  npx_fs_probe.ts  npx_semver_probe.ts  pi-sdk-boot-gaps.md  release-readiness-2026-04-12.md  resolve_agent_probe.ts  todo.md  us076-debug.test.ts  vm-friction.md
.agent/research/: agent-os-runtime-consolidation-requirements.md  agent-os-runtime-consolidation-spec.md  curl-upstream-build-notes.md  pyodide-replacement-analysis.md  wasm-git-analysis.md
.agent/specs/: browser-sidecar-e2e-proposal.md  filesystem-library-fuse-adapter-spec.md  kernel-filesystem-plugin-proposal.md  migration-gap-stories.md  overlay-filesystem-api-spec.md  overlay-metadata-proposal.md  pyodide-sidecar-integration.md  (+7 more)
crates/: CLAUDE.md
crates/execution/: CLAUDE.md  Cargo.toml
crates/execution/assets/: polyfill-registry.json  v8-bridge-zlib.js  v8-bridge.js  v8-bridge.source.js
crates/execution/assets/pyodide/: README.md
crates/execution/assets/runners/: python-runner.mjs
crates/execution/assets/undici-shims/: dns.js  http2.js  net.js  stream.js  web-streams-global.js
crates/execution/benchmarks/: node-import-baseline.md
crates/execution/src/: benchmark.rs  javascript.rs  lib.rs  node_import_cache.rs  node_process.rs  python.rs  runtime_support.rs  v8_host.rs  v8_ipc.rs  v8_runtime.rs  wasm.rs
crates/execution/tests/: benchmark.rs  bridge.rs  cjs_esm_interop.rs  javascript.rs  javascript_v8.rs  module_resolution.rs  permission_flags.rs  process.rs  python.rs  python_prewarm.rs  smoke.rs  wasm.rs
crates/execution/tests/javascript/: builtin_interception.rs  env_hardening.rs  mod.rs  module_resolution.rs  sync_rpc.rs
crates/kernel/: CLAUDE.md  Cargo.toml
crates/kernel/src/: command_registry.rs  device_layer.rs  dns.rs  fd_table.rs  kernel.rs  lib.rs  mount_plugin.rs  mount_table.rs  overlay_fs.rs  permissions.rs  pipe_manager.rs  poll.rs  process_table.rs  pty.rs  resource_accounting.rs  root_fs.rs  socket_table.rs  user.rs  vfs.rs
crates/kernel/tests/: api_surface.rs  bridge.rs  bridge_support.rs  command_registry.rs  device_layer.rs  dns_resolution.rs  fd_table.rs  identity.rs  kernel_integration.rs  loopback_routing.rs  mount_plugin.rs  mount_table.rs  overlay_fs.rs  permissions.rs  pipe_manager.rs  poll.rs  process_table.rs  pty.rs  resource_accounting.rs  root_fs.rs  smoke.rs  socket_table.rs  stdio_devices.rs  tcp_data_plane.rs  tcp_listener.rs  udp_datagram.rs  unix_domain_socket.rs  user.rs  vfs.rs  virtual_process.rs
crates/sidecar/: CLAUDE.md  Cargo.toml
crates/sidecar/protocol/: README.md  agent_os_sidecar_v1.bare
crates/sidecar/src/: bootstrap.rs  bridge.rs  execution.rs  filesystem.rs  google_drive_plugin.rs  host_dir_plugin.rs  lib.rs  main.rs  protocol.rs  s3_plugin.rs  sandbox_agent_plugin.rs  service.rs  state.rs  stdio.rs  tools.rs  vm.rs
crates/sidecar/src/acp/: client.rs  compat.rs  json_rpc.rs  mod.rs  session.rs
crates/sidecar/src/plugins/: google_drive.rs  host_dir.rs  js_bridge.rs  mod.rs  module_access.rs  s3.rs  sandbox_agent.rs
crates/sidecar/tests/: acp_integration.rs  acp_session.rs  bidirectional_frames.rs  bridge.rs  builtin_completeness.rs  builtin_conformance.rs  connection_auth.rs  crash_isolation.rs  fetch_via_undici.rs  filesystem.rs  fs_watch_and_streams.rs  google_drive.rs  guest_identity.rs  host_dir.rs  kill_cleanup.rs  layer_management.rs  permission_flags.rs  posix_compliance.rs  posix_path_repro.rs  process_isolation.rs  protocol.rs  python.rs  s3.rs  sandbox_agent.rs  security_audit.rs  security_hardening.rs  service.rs  session_isolation.rs  signal.rs  smoke.rs  socket_state_queries.rs  stdio_binary.rs  vm_lifecycle.rs
crates/sidecar/tests/acp/: client.rs  json_rpc.rs
crates/sidecar/tests/support/: mod.rs
crates/v8-runtime/: CLAUDE.md  Cargo.toml  build.rs
crates/v8-runtime/src/: bridge.rs  embedded_runtime.rs  execution.rs  host_call.rs  isolate.rs  lib.rs  runtime_protocol.rs  session.rs  snapshot.rs  stream.rs  timeout.rs
crates/v8-runtime/tests/: embedded_runtime_session.rs  event_loop.rs  snapshot.rs
docs/: filesystem.mdx  python-compatibility.mdx
docs-internal/: browserbase-e2e.md  kernel-runtime-subsystem-map.md
registry/: CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  package.json  vitest.config.ts
registry/native/crates/commands/_stubs/: Cargo.toml
registry/native/crates/commands/codex-exec/: Cargo.toml
registry/native/crates/commands/codex-exec/src/: main.rs
registry/native/crates/commands/curl/: Cargo.toml
registry/native/crates/commands/curl/src/: main.rs
registry/native/crates/libs/shims/: Cargo.toml
registry/native/crates/libs/shims/src/: nice.rs  timeout.rs  which.rs  xargs.rs
scripts/: ci.sh  test-dbt-pyodide-docker.sh  test-dbt-pyodide.ts
(+634 files in other folders)
