[package]
name = "agent-os-sidecar"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Native Agent OS sidecar scaffold"

[[bin]]
name = "agent-os-sidecar"
path = "src/main.rs"

[dependencies]
agent-os-bridge = { path = "../bridge" }
agent-os-kernel = { path = "../kernel" }
agent-os-execution = { path = "../execution" }
aws-config = "1"
aws-credential-types = "1"
aws-sdk-s3 = "1"
base64 = "0.22"
filetime = "0.2"
hmac = "0.12"
hickory-resolver = "0.26.0-beta.3"
jsonwebtoken = "8.3.0"
md-5 = "0.10"
nix = { version = "0.29", features = ["fs", "process", "signal", "user"] }
pbkdf2 = "0.12"
scrypt = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
tokio = { version = "1", features = ["io-std", "io-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }
ureq = { version = "2.10", features = ["json"] }
url = "2"

[dev-dependencies]
wat = "1.0"
