[package]
name = "agent-os-v8-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "V8 isolate runtime for Agent OS guest JavaScript execution"
publish = false

[[bin]]
name = "agent-os-v8"
path = "src/main.rs"

[dependencies]
agent-os-bridge = { path = "../bridge" }
v8 = "130"
crossbeam-channel = "0.5"
signal-hook = "0.3"
libc = "0.2"
ciborium = "0.2"
