[package]
name = "cmd-stubs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "_stubs mini-multicall binary for unsupported commands in Agent OS WasmVM"

[[bin]]
name = "_stubs"
path = "src/main.rs"

[dependencies]
secureexec-stubs = { path = "../../libs/stubs" }
