[package]
name = "cmd-codex-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "codex-exec headless agent binary for Agent OS WasmVM"

[[bin]]
name = "codex-exec"
path = "src/main.rs"

[dependencies]
wasi-spawn = { package = "secureexec-wasi-spawn", path = "../../libs/wasi-spawn" }
wasi-http = { package = "secureexec-wasi-http", path = "../../libs/wasi-http" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# WASI stub crates for codex-core dependencies that don't support wasm32-wasip1
codex-network-proxy = "0.0.0"
codex-otel = "0.0.0"
