[package]
name = "secureexec-shims"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shim implementations for commands requiring subprocess support"

[lib]
name = "shims"
path = "src/lib.rs"

[dependencies]
wasi-spawn = { package = "secureexec-wasi-spawn", path = "../wasi-spawn" }
wasi-ext = { path = "../../wasi-ext" }
